--- a/checkList.html
+++ b/checkList.html
@@ -53,53 +53,202 @@
                 <div class="tab-content" id="food-content">
                     <aside>
                         <div class="sticky-note">
-                            <p>These guidelines are provided </p>
+                            <h2>Check the rules that you have used for your website</h2><br>
+                            <form action="#">
+                                <input type="checkbox" id="color1" name="color1" value="Color1">
+                                <label for="color1">1.4.1 Using Color to Convey Meaning</label><br>
+                                <input type="checkbox" id="color2" name="color2" value="Color2">
+                                <label for="color2">1.4.3 Color Contrast (Minimum)</label><br>
+                                <input type="checkbox" id="color3" name="color3" value="Color3">
+                                <label for="color3">1.4.6 Color Contrast (Enhanced)</label><br>
+                                <input type="checkbox" id="color4" name="color4" value="Color4">
+                                <label for="color4">1.4.8 Visual Presentation</label><br>
+                                <input type="checkbox" id="color5" name="color5" value="Color5">
+                                <label for="color5">1.4.11 Non-Text Contrast</label><br>
+                            </form><br>
+                            <h3>Well Done!</h3><br>
                         </div>
                     </aside>
+                    <div>
+                        <div class="tab-element">
+                            <h2>1.4.1 Using Color to Convey Meaning</h2><br>
+                            <details>
+                                <summary>
+                                    Learn More about 1.4.1 Using Color to Convey Meaning
+                                </summary>
+                                <h3>Level A</h3>
+                                <p>Color is not used as the only visual means of conveying information, indicating an
+                                    action, prompting a response, or distinguishing a visual element.</p>
+                                <p>Where do we use this rule?</p>
+                                <ul>
+                                    <li>Graphs</li>
+                                    <li>Coloured Icons</li>
+                                </ul>
+                            </details>
+                        </div><br>
+                        <div class="tab-element">
+                            <h2>1.4.3 Color Contrast (Minimum)</h2><br>
+                            <details>
+                                <summary>
+                                    Learn More about 1.4.3 Color Contrast (Minimum)
+                                </summary>
+                                <h3>Level AA</h3>
+                                <p>The visual presentation of text and images of text has a contrast ratio of at least
+                                    4.5:1
+                                </p>
+                                <p>The exceptions are:</p>
+                                <ul>
+                                    <li><strong>Large Text</strong>
+                                        Large-scale text and images of large-scale text have a contrast ratio of at
+                                        least
+                                        3:1</li>
+                                    <li><strong>Incidental</strong>
+                                        Text or images of text that are part of an inactive user interface component,
+                                        that
+                                        are pure decoration, that are not visible to anyone, or that are part of a
+                                        picture
+                                        that contains significant other visual content, have no contrast requirement.
+                                    </li>
+                                    <li><strong>Logotypes</strong>
+                                        Text that is part of a logo or brand name has no contrast requirement.</li>
+                                </ul>
+                            </details>
+                        </div><br>
+                        <div class="tab-element">
+                            <h2>1.4.6 Color Contrast (Enhanced)</h2><br>
+                            <details>
+                                <summary>
+                                    Learn More about 1.4.6 Color Contrast (Enhanced)
+                                </summary>
+                                <h3>Level AAA</h3>
+                                <p>The visual presentation of text and images of text has a contrast ratio of at least
+                                    7:1
+                                </p>
+                                <p>The exceptions are:</p>
+                                <ul>
+                                    <li><strong>Large Text</strong>
+                                        Large-scale text and images of large-scale text have a contrast ratio of at
+                                        least
+                                        4.5:1</li>
+                                    <li><strong>Incidental</strong>
+                                        Text or images of text that are part of an inactive user interface component,
+                                        that
+                                        are pure decoration, that are not visible to anyone, or that are part of a
+                                        picture
+                                        that contains significant other visual content, have no contrast requirement.
+                                    </li>
+                                    <li><strong>Logotypes</strong>
+                                        Text that is part of a logo or brand name has no contrast requirement.</li>
+                                </ul>
+                            </details>
+                        </div><br>
+                        <div class="tab-element">
+                            <h2>1.4.8 Visual Presentation</h2><br>
+                            <details>
+                                <summary>
+                                    Learn More about 1.4.8 Visual Presentation
+                                </summary>
+                                <h3>Level AAA</h3>
+                                <p>For the visual presentation of blocks of text, a mechanism is available to achieve
+                                    the
+                                    following
+                                </p>
+                                <ul>
+                                    <li>Foreground and background colors can be selected by the user.</li>
+                                    <li>Width is no more than 80 characters or glyphs (40 if CJK).</li>
+                                    <li>Text is not justified (aligned to both the left and the right margins).</li>
+                                    <li>Line spacing (leading) is at least space-and-a-half within paragraphs, and
+                                        paragraph
+                                        spacing is at least 1.5 times larger than the line spacing.</li>
+                                    <li>Text can be resized without assistive technology up to 200 percent in a way that
+                                        does not require the user to scroll horizontally to read a line of text on a
+                                        full-screen window.</li>
+                                </ul>
+                            </details>
+                        </div><br>
+                        <div class="tab-element">
+                            <h2>1.4.11 Non-Text Contrast</h2><br>
+                            <details>
+                                <summary>
+                                    Learn More about 1.4.11 Non-Text Contrast
+                                </summary>
+                                <h3>Level AAA</h3>
+                                <p>For the visual presentation of blocks of text, a mechanism is available to achieve
+                                    the
+                                    following
+                                </p>
+                                <ul>
+                                    <li>Foreground and background colors can be selected by the user.</li>
+                                    <li>Width is no more than 80 characters or glyphs (40 if CJK).</li>
+                                    <li>Text is not justified (aligned to both the left and the right margins).</li>
+                                    <li>Line spacing (leading) is at least space-and-a-half within paragraphs, and
+                                        paragraph
+                                        spacing is at least 1.5 times larger than the line spacing.</li>
+                                    <li>Text can be resized without assistive technology up to 200 percent in a way that
+                                        does not require the user to scroll horizontally to read a line of text on a
+                                        full-screen window.</li>
+                                </ul>
+                            </details>
+                        </div><br>
+                    </div>
+                </div>
+            </div>
+
+            <div class="tab-content hidden" id="places-content">
+                <aside>
+                    <div class="sticky-note">
+                        <h2>Check the rules that you have used for your website</h2><br>
+                        <form action="#">
+                            <input type="checkbox" id="text1" name="text1" value="text1">
+                            <label for="color1">1.4.4 Resize Text</label><br>
+                            <input type="checkbox" id="color2" name="color2" value="Color2">
+                            <label for="color2">1.4.5 Images of Text</label><br>
+                            <input type="checkbox" id="color3" name="color3" value="Color3">
+                            <label for="color3">1.4.6 Color Contrast (Enhanced)</label><br>
+                            <input type="checkbox" id="color4" name="color4" value="Color4">
+                            <label for="color4">1.4.8 Visual Presentation</label><br>
+                            <input type="checkbox" id="color5" name="color5" value="Color5">
+                            <label for="color5">1.4.11 Non-Text Contrast</label><br>
+                        </form><br>
+                        <h3>Well Done!</h3><br>
+                    </div>
+                </aside>
+                <div>
                     <div class="tab-element">
-                        <h2>1.4.1 Using Color to Convey Meaning</h2><br>
+                        <h2>1.4.4 Resize Text</h2><br>
                         <details>
                             <summary>
-                                Learn More about this Rule
+                                Learn More about 1.4.4 Resize Text
                             </summary>
-                            <h3>Level A</h3>
-                            <p>Color is not used as the only visual means of conveying information, indicating an
-                                action, prompting a response, or distinguishing a visual element.</p>
-                            <p>Where do we use this rule?</p>
-                            <ul>
-                                <li>Graphs</li>
-                                <li>Coloured Icons</li>
-                            </ul>
+                            <h3>Level AA</h3>
+                            <p>Except for captions and images of text, text can be resized without assistive technology
+                                up to 200 percent without loss of content or functionality.</p>
                         </details>
                     </div><br>
                     <div class="tab-element">
-                        <h2>1.4.3 Color Contrast (Minimum)</h2><br>
+                        <h2>1.4.5 Images of Text</h2><br>
                         <details>
                             <summary>
-                                Learn More about this Rule
+                                Learn More about 1.4.5 Images of Text
                             </summary>
                             <h3>Level AA</h3>
-                            <p>The visual presentation of text and images of text has a contrast ratio of at least 4.5:1
+                            <p>TIf the technologies being used can achieve the visual presentation, text is used to
+                                convey information rather than images of text except for the following:
                             </p>
                             <p>The exceptions are:</p>
                             <ul>
-                                <li><strong>Large Text</strong>
-                                    Large-scale text and images of large-scale text have a contrast ratio of at least
-                                    3:1</li>
-                                <li><strong>Incidental</strong>
-                                    Text or images of text that are part of an inactive user interface component, that
-                                    are pure decoration, that are not visible to anyone, or that are part of a picture
-                                    that contains significant other visual content, have no contrast requirement.</li>
-                                <li><strong>Logotypes</strong>
-                                    Text that is part of a logo or brand name has no contrast requirement.</li>
+                                <li><strong>Customizable</strong>
+                                    The image of text can be visually customized to the user's requirements;</li>
+                                <li><strong>Essential</strong>
+                                    A particular presentation of text is essential to the information being conveyed.</li>
                             </ul>
                         </details>
                     </div><br>
                     <div class="tab-element">
-                        <h2>1.4.8 Color Contrast (Enhanced)</h2><br>
+                        <h2>1.4.9 Images of Text (No Exception)</h2><br>
                         <details>
                             <summary>
-                                Learn More about this Rule
+                                Learn More about 1.4.9 Images of Text (No Exception)
                             </summary>
                             <h3>Level AAA</h3>
                             <p>The visual presentation of text and images of text has a contrast ratio of at least 7:1
@@ -118,29 +267,54 @@
                             </ul>
                         </details>
                     </div><br>
-                </div>
-            </div>
-
-            <div class="tab-content hidden" id="places-content">
-                <div class="sticky-wrapper">
-                    <div class="sticky-note">
-                        <p>These guidelines are provided </p>
-                    </div>
-                    <div class="sticky-note">
-                        <p>These guidelines are provided </p>
-                    </div>
+                    <div class="tab-element">
+                        <h2>1.4.8 Visual Presentation</h2><br>
+                        <details>
+                            <summary>
+                                Learn More about 1.4.8 Visual Presentation
+                            </summary>
+                            <h3>Level AAA</h3>
+                            <p>For the visual presentation of blocks of text, a mechanism is available to achieve the
+                                following
+                            </p>
+                            <ul>
+                                <li>Foreground and background colors can be selected by the user.</li>
+                                <li>Width is no more than 80 characters or glyphs (40 if CJK).</li>
+                                <li>Text is not justified (aligned to both the left and the right margins).</li>
+                                <li>Line spacing (leading) is at least space-and-a-half within paragraphs, and paragraph
+                                    spacing is at least 1.5 times larger than the line spacing.</li>
+                                <li>Text can be resized without assistive technology up to 200 percent in a way that
+                                    does not require the user to scroll horizontally to read a line of text on a
+                                    full-screen window.</li>
+                            </ul>
+                        </details>
+                    </div><br>
+                    <div class="tab-element">
+                        <h2>1.4.11 Non-Text Contrast</h2><br>
+                        <details>
+                            <summary>
+                                Learn More about 1.4.11 Non-Text Contrast
+                            </summary>
+                            <h3>Level AAA</h3>
+                            <p>For the visual presentation of blocks of text, a mechanism is available to achieve the
+                                following
+                            </p>
+                            <ul>
+                                <li>Foreground and background colors can be selected by the user.</li>
+                                <li>Width is no more than 80 characters or glyphs (40 if CJK).</li>
+                                <li>Text is not justified (aligned to both the left and the right margins).</li>
+                                <li>Line spacing (leading) is at least space-and-a-half within paragraphs, and paragraph
+                                    spacing is at least 1.5 times larger than the line spacing.</li>
+                                <li>Text can be resized without assistive technology up to 200 percent in a way that
+                                    does not require the user to scroll horizontally to read a line of text on a
+                                    full-screen window.</li>
+                            </ul>
+                        </details>
+                    </div><br>
                 </div>
             </div>
 
             <div class="tab-content hidden" id="me-content">
-                <div class="sticky-wrapper">
-                    <div class="sticky-note">
-                        <p>These guidelines are provided </p>
-                    </div>
-                    <div class="sticky-note">
-                        <p>These guidelines are provided </p>
-                    </div>
-                </div>
             </div>
         </div>
         </div>
