--- a/checkList.html
+++ b/checkList.html
@@ -143,6 +143,12 @@
                             </details>
                         </div><br>
                         <div class="tab-element">
+                            <p class="highlighted-text"><strong>Differences Between Rules 1.4.3 and 1.4.6:</strong></p>
+                            <p class="highlighted-text">1.4.6 is a more stringent requirement designed to help users
+                                with more severe vision
+                                impairments, whereas 1.4.3 is the baseline for most web content. </p>
+                        </div><br>
+                        <div class="tab-element">
                             <h2>1.4.8 Visual Presentation</h2><br>
                             <details>
                                 <summary>
@@ -199,16 +205,18 @@
                     <div class="sticky-note">
                         <h2>Check the rules that you have used for your website</h2><br>
                         <form action="#">
-                            <input type="checkbox" id="text1" name="text1" value="text1">
-                            <label for="color1">1.4.4 Resize Text</label><br>
-                            <input type="checkbox" id="color2" name="color2" value="Color2">
-                            <label for="color2">1.4.5 Images of Text</label><br>
-                            <input type="checkbox" id="color3" name="color3" value="Color3">
-                            <label for="color3">1.4.6 Color Contrast (Enhanced)</label><br>
-                            <input type="checkbox" id="color4" name="color4" value="Color4">
-                            <label for="color4">1.4.8 Visual Presentation</label><br>
-                            <input type="checkbox" id="color5" name="color5" value="Color5">
-                            <label for="color5">1.4.11 Non-Text Contrast</label><br>
+                            <input type="checkbox" id="text1" name="text1" value="Text1">
+                            <label for="text1">1.4.4 Resize Text</label><br>
+                            <input type="checkbox" id="text2" name="text2" value="Text2">
+                            <label for="text2">1.4.5 Images of Text</label><br>
+                            <input type="checkbox" id="text3" name="text3" value="Text3">
+                            <label for="text3">1.4.9 Images of Text (No Exception)</label><br>
+                            <input type="checkbox" id="text4" name="text4" value="Text4">
+                            <label for="text4">1.4.12 Text Spacing</label><br>
+                            <input type="checkbox" id="text5" name="text5" value="Text5">
+                            <label for="text5">2.4.4 Link Purpose (In Context)</label><br>
+                            <input type="checkbox" id="text6" name="text6" value="Text6">
+                            <label for="text6"> 2.4.9 Link Purpose (Link Only)</label><br>
                         </form><br>
                         <h3>Well Done!</h3><br>
                     </div>
@@ -240,7 +248,8 @@
                                 <li><strong>Customizable</strong>
                                     The image of text can be visually customized to the user's requirements;</li>
                                 <li><strong>Essential</strong>
-                                    A particular presentation of text is essential to the information being conveyed.</li>
+                                    A particular presentation of text is essential to the information being conveyed.
+                                </li>
                             </ul>
                         </details>
                     </div><br>
@@ -251,70 +260,177 @@
                                 Learn More about 1.4.9 Images of Text (No Exception)
                             </summary>
                             <h3>Level AAA</h3>
-                            <p>The visual presentation of text and images of text has a contrast ratio of at least 7:1
+                            <p>Images of text are only used for pure decoration or where a particular presentation of
+                                text is essential to the information being conveyed.
                             </p>
-                            <p>The exceptions are:</p>
+                        </details>
+                    </div><br>
+                    <div class="tab-element">
+                        <p class="highlighted-text"><strong>Differences Between Rules 1.4.5 and 1.4.9:</strong></p>
+                        <p class="highlighted-text">1.4.5 requires real text for images of text (if technology allows)
+                            at the AA level, while 1.4.9 prohibits exceptions for images of text entirely at the AAA
+                            level, demanding real text for all but purely decorative purposes</p>
+                    </div><br>
+                    <div class="tab-element">
+                        <h2>1.4.12 Text Spacing</h2><br>
+                        <details>
+                            <summary>
+                                Learn More about 1.4.12 Text Spacing
+                            </summary>
+                            <h3>Level AA</h3>
+                            <p>In content implemented using markup languages that support the following text style
+                                properties, no loss of content or functionality occurs by setting all of the following
+                                and by changing no other style property:
+                            </p>
                             <ul>
-                                <li><strong>Large Text</strong>
-                                    Large-scale text and images of large-scale text have a contrast ratio of at least
-                                    4.5:1</li>
-                                <li><strong>Incidental</strong>
-                                    Text or images of text that are part of an inactive user interface component, that
-                                    are pure decoration, that are not visible to anyone, or that are part of a picture
-                                    that contains significant other visual content, have no contrast requirement.</li>
-                                <li><strong>Logotypes</strong>
-                                    Text that is part of a logo or brand name has no contrast requirement.</li>
+                                <li>Line height (line spacing) to at least 1.5 times the font size</li>
+                                <li>Spacing following paragraphs to at least 2 times the font size</li>
+                                <li>Letter spacing (tracking) to at least 0.12 times the font size</li>
+                                <li>Word spacing to at least 0.16 times the font size.</li>
                             </ul>
                         </details>
                     </div><br>
                     <div class="tab-element">
-                        <h2>1.4.8 Visual Presentation</h2><br>
+                        <h2>2.4.4 Link Purpose (In Context)</h2><br>
                         <details>
                             <summary>
-                                Learn More about 1.4.8 Visual Presentation
+                                Learn More about 2.4.4 Link Purpose (In Context)
                             </summary>
-                            <h3>Level AAA</h3>
-                            <p>For the visual presentation of blocks of text, a mechanism is available to achieve the
-                                following
+                            <h3>Level A</h3>
+                            <p>The purpose of each link can be determined from the link text alone or from the link text
+                                together with its programmatically determined link context, except where the purpose of
+                                the link would be ambiguous to users in general.
                             </p>
-                            <ul>
-                                <li>Foreground and background colors can be selected by the user.</li>
-                                <li>Width is no more than 80 characters or glyphs (40 if CJK).</li>
-                                <li>Text is not justified (aligned to both the left and the right margins).</li>
-                                <li>Line spacing (leading) is at least space-and-a-half within paragraphs, and paragraph
-                                    spacing is at least 1.5 times larger than the line spacing.</li>
-                                <li>Text can be resized without assistive technology up to 200 percent in a way that
-                                    does not require the user to scroll horizontally to read a line of text on a
-                                    full-screen window.</li>
-                            </ul>
                         </details>
                     </div><br>
                     <div class="tab-element">
-                        <h2>1.4.11 Non-Text Contrast</h2><br>
+                        <h2> 2.4.9 Link Purpose (Link Only)</h2><br>
                         <details>
                             <summary>
-                                Learn More about 1.4.11 Non-Text Contrast
+                                Learn More about 2.4.9 Link Purpose (Link Only)
                             </summary>
                             <h3>Level AAA</h3>
-                            <p>For the visual presentation of blocks of text, a mechanism is available to achieve the
-                                following
+                            <p>A mechanism is available to allow the purpose of each link to be identified from link
+                                text alone, except where the purpose of the link would be ambiguous to users in general.
                             </p>
-                            <ul>
-                                <li>Foreground and background colors can be selected by the user.</li>
-                                <li>Width is no more than 80 characters or glyphs (40 if CJK).</li>
-                                <li>Text is not justified (aligned to both the left and the right margins).</li>
-                                <li>Line spacing (leading) is at least space-and-a-half within paragraphs, and paragraph
-                                    spacing is at least 1.5 times larger than the line spacing.</li>
-                                <li>Text can be resized without assistive technology up to 200 percent in a way that
-                                    does not require the user to scroll horizontally to read a line of text on a
-                                    full-screen window.</li>
-                            </ul>
                         </details>
                     </div><br>
                 </div>
             </div>
 
             <div class="tab-content hidden" id="me-content">
+                <aside>
+                    <div class="sticky-note">
+                        <h2>Check the rules that you have used for your website</h2><br>
+                        <form action="#">
+                            <input type="checkbox" id="read1" name="read1" value="Read1">
+                            <label for="read1">2.4.6 Headings and Labels</label><br>
+                            <input type="checkbox" id="read2" name="read2" value="Read2">
+                            <label for="read2">3.1.1 Language of Page</label><br>
+                            <input type="checkbox" id="read3" name="read3" value="Read3">
+                            <label for="read3">3.1.2 Language of Parts</label><br>
+                            <input type="checkbox" id="read4" name="read4" value="Read4">
+                            <label for="text4">3.1.3 Unusual Words</label><br>
+                            <input type="checkbox" id="read5" name="read5" value="Read5">
+                            <label for="read5">3.1.4 Abbreviations</label><br>
+                            <input type="checkbox" id="read6" name="read6" value="Read6">
+                            <label for="read6">3.1.5 Reading Level</label><br>
+                            <input type="checkbox" id="read7" name="read7" value="Read7">
+                            <label for="read7">3.1.6 Pronunciation</label><br>
+                        </form><br>
+                        <h3>Well Done!</h3><br>
+                    </div>
+                </aside>
+                <div>
+                    <div class="tab-element">
+                        <h2>2.4.6 Headings and Labels</h2><br>
+                        <details>
+                            <summary>
+                                Learn More about 2.4.6 Headings and Labels
+                            </summary>
+                            <h3>Level AA</h3>
+                            <p>Headings and labels describe topic or purpose.</p>
+                        </details>
+                    </div><br>
+                    <div class="tab-element">
+                        <p class="highlighted-text"><strong>Section 3.1 of the WCAG 2.2 List talks about rules for
+                                Readibility</strong></p>
+                    </div><br>
+                    <div class="tab-element">
+                        <h2>3.1.1 Language of Page</h2><br>
+                        <details>
+                            <summary>
+                                Learn More about 3.1.1 Language of Page
+                            </summary>
+                            <h3>Level A</h3>
+                            <p>The default human language of each web page can be programmatically determined.
+                            </p>
+                        </details>
+                    </div><br>
+                    <div class="tab-element">
+                        <h2>3.1.2 Language of Parts</h2><br>
+                        <details>
+                            <summary>
+                                Learn More about 3.1.2 Language of Parts
+                            </summary>
+                            <h3>Level AA</h3>
+                            <p>The human language of each passage or phrase in the content can be programmatically
+                                determined except for proper names, technical terms, words of indeterminate language,
+                                and words or phrases that have become part of the vernacular of the immediately
+                                surrounding text.
+                            </p>
+                        </details>
+                    </div><br>
+                    <div class="tab-element">
+                        <h2>3.1.3 Unusual Words</h2><br>
+                        <details>
+                            <summary>
+                                Learn More about 3.1.3 Unusual Words
+                            </summary>
+                            <h3>Level AAA</h3>
+                            <p>A mechanism is available for identifying specific definitions of words or phrases used in
+                                an unusual or restricted way, including idioms and jargon.
+                            </p>
+                        </details>
+                    </div><br>
+                    <div class="tab-element">
+                        <h2>3.1.4 Abbreviations</h2><br>
+                        <details>
+                            <summary>
+                                Learn More about 3.1.4 Abbreviations
+                            </summary>
+                            <h3>Level AAA</h3>
+                            <p>A mechanism for identifying the expanded form or meaning of abbreviations is available.
+                            </p>
+                        </details>
+                    </div><br>
+                    <div class="tab-element">
+                        <h2> 3.1.5 Reading Level</h2><br>
+                        <details>
+                            <summary>
+                                Learn More about 3.1.6 Pronunciation
+                            </summary>
+                            <h3>Level AAA</h3>
+                            <p>A mechanism is available for identifying specific pronunciation of words where meaning of
+                                the words, in context, is ambiguous without knowing the pronunciation.
+                            </p>
+                        </details>
+                    </div><br>
+                    <div class="tab-element">
+                        <h2> 3.1.6 Pronunciation</h2><br>
+                        <details>
+                            <summary>
+                                Learn More about 3.1.5 Reading Level
+                            </summary>
+                            <h3>Level AAA</h3>
+                            <p>When text requires reading ability more advanced than the lower secondary education level
+                                after removal of proper names and titles, supplemental content, or a version that does
+                                not require reading ability more advanced than the lower secondary education level, is
+                                available.
+                            </p>
+                        </details>
+                    </div><br>
+                </div>
             </div>
         </div>
         </div>
