made changes to html again

--- a/checkList.html
+++ b/checkList.html
@@ -30,15 +30,18 @@
     <main>
         <section class="other-section" id="overview">
             <div class="other-centered">
-                <div>
+                <div class="other-element">
                     <h1>Keep track of your Website's Accessiblity</h1>
                     <p>Your AIM Score depends on how accessible your website is, use this checklist to find out if you
                         are
                         following all the rules</p>
+                    <p style="font-style: oblique;">Note: All the rules are from the latest WCAG 2.2 list</p>
                 </div>
                 <div class="sticky-note">
-                    <p> Note: <br>
-                        This list has been directly sourced from the WCAG 2.2 List </p>
+                    <h2>Conformance Levels</h2>
+                    <p>There are three Levels of Conformance. <br>Each level builds on the previous level like a pyramid.
+                        <br>So, in order to meet Level AA, you must meet all of Level A, <br>and in order to meet Level AAA, you
+                        must meet all of Level AA.</p>
                 </div>
             </div>
         </section>
