fixed validation errors

--- a/basics.html
+++ b/basics.html
@@ -28,19 +28,35 @@
         </nav>
     </header>
     <main>
-        <section id="overview">
-            <h1>Learn about WCAG 2.2</h1>
+        <section id="overview" class="other-section">
+            <div class="other-centered">
+                <div class="hero-centered">
+                    <h1>Learn about WCAG 2.2</h1>
+                    <p>WCAG 2.2 stands for <strong>Web Content Accessibility Guidelines version 2.2</strong>. These
+                        rules help
+                        make websites
+                        usable for everyone (including people with disabilities.) </p>
+                </div>
+            </div>
         </section>
         <section>
-            <p>WCAG 2.2 stands for <strong>Web Content Accessibility Guidelines version 2.2</strong>. These rules help
-                make websites
-                usable for everyone—including people with disabilities.</p>
+            <div class="sticky-wrapper">
+                <div class="sticky-note">
+                    <p>These guidelines are provided </p>
+                </div>
+                <div class="sticky-note">
+                    <p>These guidelines are provided </p>
+                </div>
+                <div class="sticky-note">
+                    <p>These guidelines are provided </p>
+                </div>
+            </div><br>
         </section>
     </main>
     <footer>
         <div>
             <p><a href="https://www.w3.org/TR/WCAG22/" target="_blank">WCAG
-                Website</a> | SimpleWeb by Shrina Tyarla </p>
+                    Website</a> | SimpleWeb by Shrina Tyarla </p>
 
             <p>© Copyrights <span id="year"></span></p>
         </div>
