--- a/checkList.html
+++ b/checkList.html
@@ -76,7 +76,7 @@
                         <div class="tab-element">
                             <h2>1.4.1 Using Color to Convey Meaning</h2><br>
                             <details>
-                                <summary>
+                                <summary tabindex="0">
                                     Learn More about 1.4.1 Using Color to Convey Meaning
                                 </summary>
                                 <h3>Level A</h3>
@@ -92,7 +92,7 @@
                         <div class="tab-element">
                             <h2>1.4.3 Color Contrast (Minimum)</h2><br>
                             <details>
-                                <summary>
+                                <summary tabindex="0">
                                     Learn More about 1.4.3 Color Contrast (Minimum)
                                 </summary>
                                 <h3>Level AA</h3>
