--- a/index.html
+++ b/index.html
@@ -29,29 +29,22 @@
     </header>
     <main>
         <section id="overview" class="hero-section">
+            <div>
+                <img src="img/SimpleWeb.png" alt="Simple Web Logo">
+            </div>
             <div class="hero-centered">
                 <h1>Welcome to SimpleWeb!</h1>
                 <p>The Ultimate Web Accessibility Tool</p>
+                <a href="checkList.html" class="highlighted-text">Check Out the Checklist</a>
             </div>
         </section>
-            <section>
-                <div class="sticky-wrapper">
-                    <div class="sticky-note">
-                        <p>These guidelines are provided </p>
-                    </div>
-                    <div class="sticky-note">
-                        <p>These guidelines are provided </p>
-                    </div>
-                    <div class="sticky-note">
-                        <p>These guidelines are provided </p>
-                    </div>
-                </div><br>
-            </section>
+        <section>
+        </section>
     </main>
     <footer>
         <div>
             <p><a href="https://www.w3.org/TR/WCAG22/" target="_blank">WCAG
-                Website</a> | SimpleWeb by Shrina Tyarla </p>
+                    Website</a> | SimpleWeb by Shrina Tyarla </p>
 
             <p>© Copyrights <span id="year"></span></p>
         </div>
