added more content

--- a/basics.html
+++ b/basics.html
@@ -23,34 +23,76 @@
             <ul class="nav-class">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="checkList.html">Checklist</a></li>
-                <li><a href="basics.html" class="active">Tools</a></li>
+                <li><a href="basics.html" class="active">Learn</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section id="overview" class="other-section">
-            <div class="other-centered">
-                <div class="hero-centered">
-                    <h1>Learn about WCAG 2.2</h1>
-                    <p>WCAG 2.2 stands for <strong>Web Content Accessibility Guidelines version 2.2</strong>. These
-                        rules help
-                        make websites
-                        usable for everyone (including people with disabilities.) </p>
-                </div>
+            <div class="hero-centered">
+                <h1>Learn about Accessiblity Testing</h1>
+                <p>Covering all the important points about WCAG as well as talk about tools and techniques for
+                    acessibility testing</p>
             </div>
         </section>
         <section>
+            <h1>What is WCAG 2.2?</h1>
+            <p>WCAG 2.2 stands for <strong>Web Content Accessibility Guidelines version 2.2</strong>. These
+                rules help
+                make websites
+                usable for everyone (including people with disabilities.) </p><br>
+        </section>
+        <section>
+            <h1>Why does WCAG 2.2 Accessibility Matter?</h1>
             <div class="sticky-wrapper">
                 <div class="sticky-note">
-                    <p>These guidelines are provided </p>
+                    <p><strong>Inclusion:</strong> <br>Makes sure everyone can use your site, <br>no matter their
+                        abilities.</p>
                 </div>
                 <div class="sticky-note">
-                    <p>These guidelines are provided </p>
+                    <p><strong>Legal compliance:</strong><br> Keeps you on the right side of the law.</p>
                 </div>
                 <div class="sticky-note">
-                    <p>These guidelines are provided </p>
+                    <p><strong>Better experience:</strong><br>Accessible sites are easier for everyone <br>to use.</p>
                 </div>
             </div><br>
+        </section>
+        <section>
+            <h1>WCAG 2.2—The Four Main Principles</h1>
+            <div class="sticky-wrapper">
+                <div class="highlighted-text no-background">
+                    <p>Perceivable</p>
+                    <ul>
+                        <li>Content is easy to see, hear, or read.</li>
+                        <li>Use clear text, good color contrast, and descriptive <br>images (with alt text).</li>
+                    </ul>
+                </div>
+                <div class="highlighted-text no-background">
+                    <p>Operable</p>
+                    <ul>
+                        <li>Everyone can navigate and use the site, <br>regardless of the device</li>
+                        <li>Make sure all links and buttons are easy to reach and use.</li>
+                    </ul>
+                </div>
+                <div class="highlighted-text no-background">
+                    <p>Understandable</p>
+                    <ul>
+                        <li>Content and navigation make sense.</li>
+                        <li>Use simple language and clear instructions.</li>
+                    </ul>
+                </div>
+                <div class="highlighted-text no-background">
+                    <p>Robust</p>
+                    <ul>
+                        <li>Your site works well with different browsers and <br>assistive technologies (like screen
+                            readers).</li>
+                    </ul>
+                </div>
+            </div><br>
+        </section>
+        <section>
+            <h1>Types of Testing</h1>
+            
         </section>
     </main>
     <footer>
