--- a/checkList.html
+++ b/checkList.html
@@ -23,7 +23,7 @@
             <ul class="nav-class">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="checkList.html" class="active">Checklist</a></li>
-                <li><a href="basics.html">Tools</a></li>
+                <li><a href="basics.html">Learn</a></li>
             </ul>
         </nav>
     </header>
