--- a/index.html
+++ b/index.html
@@ -23,19 +23,24 @@
             <ul class="nav-class">
                 <li class="active"><a href="index.html" class="active">Home</a></li>
                 <li><a href="checkList.html">Checklist</a></li>
-                <li><a href="basics.html">Tools</a></li>
+                <li><a href="basics.html">Learn</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section id="overview" class="hero-section">
-            <div>
-                <img src="img/SimpleWeb.png" alt="Simple Web Logo">
-            </div>
+            <div class="sticky-wrapper">
+                </div>
+                <div class="sticky-note">
+                    <a href="checkList.html">Check Out the Checklist</a>
+                </div>
+                <div class="sticky-note">
+                    <a href="basics.html">Learn More about <br>Accessibility Testing</a>
+                </div>
+            </div><br>
             <div class="hero-centered">
                 <h1>Welcome to SimpleWeb!</h1>
                 <p>The Ultimate Web Accessibility Tool</p>
-                <a href="checkList.html" class="highlighted-text">Check Out the Checklist</a>
             </div>
         </section>
         <section>
