added more styling

--- a/basics.html
+++ b/basics.html
@@ -60,28 +60,28 @@
         <section>
             <h1>WCAG 2.2—The Four Main Principles</h1>
             <div class="sticky-wrapper">
-                <div class="highlighted-text no-background">
+                <div class="half-note">
                     <p>Perceivable</p>
                     <ul>
                         <li>Content is easy to see, hear, or read.</li>
                         <li>Use clear text, good color contrast, and descriptive <br>images (with alt text).</li>
                     </ul>
                 </div>
-                <div class="highlighted-text no-background">
+                <div class="half-note">
                     <p>Operable</p>
                     <ul>
                         <li>Everyone can navigate and use the site, <br>regardless of the device</li>
                         <li>Make sure all links and buttons are easy to reach and use.</li>
                     </ul>
                 </div>
-                <div class="highlighted-text no-background">
+                <div class="half-note">
                     <p>Understandable</p>
                     <ul>
                         <li>Content and navigation make sense.</li>
                         <li>Use simple language and clear instructions.</li>
                     </ul>
                 </div>
-                <div class="highlighted-text no-background">
+                <div class="half-note">
                     <p>Robust</p>
                     <ul>
                         <li>Your site works well with different browsers and <br>assistive technologies (like screen
@@ -92,7 +92,16 @@
         </section>
         <section>
             <h1>Types of Testing</h1>
-            
+            <div class="sticky-wrapper">
+                <div class="half-note">
+                    <h2>Automatic Testing</h2>
+                    <p>Automatice testing makes use of softwares and different technologies to validate
+                        accessibllity of websites</p>
+                </div>
+                <div class="half-note">
+                    <h2>Automatic Testing</h2>
+                    <p>A human tester interacts with the website or application to find issues that software cannot.</p>
+                </div>
         </section>
     </main>
     <footer>
