--- a/index.html
+++ b/index.html
@@ -30,17 +30,20 @@
     <main>
         <section id="overview" class="hero-section">
             <div class="sticky-wrapper">
-                </div>
-                <div class="sticky-note">
-                    <a href="checkList.html">Check Out the Checklist</a>
-                </div>
-                <div class="sticky-note">
-                    <a href="basics.html">Learn More about <br>Accessibility Testing</a>
-                </div>
             </div><br>
             <div class="hero-centered">
                 <h1>Welcome to SimpleWeb!</h1>
                 <p>The Ultimate Web Accessibility Tool</p>
+                <div class="sticky-wrapper">
+                <a href="checkList.html" class="btn btn-primary">Checkout the Checklist</a>
+                <a href="basics.html" class="btn btn-primary">Learn More anout WCAG</a>
+                <!-- <div class="sticky-note">
+                    <a href="checkList.html">Check Out the Checklist</a>
+                </div>
+                <div class="sticky-note">
+                    <a href="basics.html">Learn More about <br>Accessibility Testing</a>
+                </div> -->
+            </div><br>
             </div>
         </section>
         <section>
