--- a/basics.html
+++ b/basics.html
@@ -99,7 +99,7 @@
                         accessibllity of websites</p>
                 </div>
                 <div class="half-note">
-                    <h2>Automatic Testing</h2>
+                    <h2>Manual Testing</h2>
                     <p>A human tester interacts with the website or application to find issues that software cannot.</p>
                 </div>
         </section>
