edited form errors

--- a/checkList.html
+++ b/checkList.html
@@ -333,7 +333,7 @@
                             <input type="checkbox" id="read3" name="read3" value="Read3">
                             <label for="read3">3.1.2 Language of Parts</label><br>
                             <input type="checkbox" id="read4" name="read4" value="Read4">
-                            <label for="text4">3.1.3 Unusual Words</label><br>
+                            <label for="read4">3.1.3 Unusual Words</label><br>
                             <input type="checkbox" id="read5" name="read5" value="Read5">
                             <label for="read5">3.1.4 Abbreviations</label><br>
                             <input type="checkbox" id="read6" name="read6" value="Read6">
