fixed focus errors

--- a/checkList.html
+++ b/checkList.html
@@ -343,7 +343,7 @@
                         </form><br>
                         <h3>Well Done!</h3><br>
                     </div>
-                </aside>
+                </aside><br>
                 <div>
                     <div class="tab-element">
                         <h2>2.4.6 Headings and Labels</h2><br>
