--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p>The Ultimate Web Accessibility Tool</p>
                 <div class="sticky-wrapper">
                 <a href="checkList.html" class="btn btn-primary">Checkout the Checklist</a>
-                <a href="basics.html" class="btn btn-primary">Learn More anout WCAG</a>
+                <a href="basics.html" class="btn btn-primary">Learn More about WCAG</a>
                 <!-- <div class="sticky-note">
                     <a href="checkList.html">Check Out the Checklist</a>
                 </div>
