--- a/basics.html
+++ b/basics.html
@@ -29,20 +29,20 @@
     </header>
     <main>
         <section id="overview" class="other-section">
-            <div class="hero-centered">
+            <div class="hero-centered" tabindex="0">
                 <h1>Learn about Accessiblity Testing</h1>
                 <p>Covering all the important points about WCAG as well as talk about tools and techniques for
                     acessibility testing</p>
             </div>
         </section>
-        <section>
+        <section tabindex="0">
             <h1>What is WCAG 2.2?</h1>
             <p>WCAG 2.2 stands for <strong>Web Content Accessibility Guidelines version 2.2</strong>. These
                 rules help
                 make websites
                 usable for everyone (including people with disabilities.) </p><br>
         </section>
-        <section>
+        <section tabindex="0">
             <h1>Why does WCAG 2.2 Accessibility Matter?</h1>
             <div class="sticky-wrapper">
                 <div class="sticky-note">
@@ -60,28 +60,28 @@
         <section>
             <h1>WCAG 2.2—The Four Main Principles</h1>
             <div class="sticky-wrapper">
-                <div class="half-note">
+                <div class="half-note" tabindex="0">
                     <p>Perceivable</p>
                     <ul>
                         <li>Content is easy to see, hear, or read.</li>
                         <li>Use clear text, good color contrast, and descriptive <br>images (with alt text).</li>
                     </ul>
                 </div>
-                <div class="half-note">
+                <div class="half-note" tabindex="0">
                     <p>Operable</p>
                     <ul>
                         <li>Everyone can navigate and use the site, <br>regardless of the device</li>
                         <li>Make sure all links and buttons are easy to reach and use.</li>
                     </ul>
                 </div>
-                <div class="half-note">
+                <div class="half-note" tabindex="0">
                     <p>Understandable</p>
                     <ul>
                         <li>Content and navigation make sense.</li>
                         <li>Use simple language and clear instructions.</li>
                     </ul>
                 </div>
-                <div class="half-note">
+                <div class="half-note" tabindex="0">
                     <p>Robust</p>
                     <ul>
                         <li>Your site works well with different browsers and <br>assistive technologies (like screen
@@ -93,12 +93,12 @@
         <section>
             <h1>Types of Testing</h1>
             <div class="sticky-wrapper">
-                <div class="half-note">
+                <div class="half-note" tabindex="0">
                     <h2>Automatic Testing</h2>
                     <p>Automatice testing makes use of softwares and different technologies to validate
                         accessibllity of websites</p>
                 </div>
-                <div class="half-note">
+                <div class="half-note" tabindex="0">
                     <h2>Manual Testing</h2>
                     <p>A human tester interacts with the website or application to find issues that software cannot.</p>
                 </div>
@@ -106,17 +106,17 @@
         <section>
             <h1>Automatic Testing Methods</h1>
             <div class="sticky-wrapper">
-                <div class="half-note">
+                <div class="half-note" tabindex="0">
                     <h2>Using WAVE Validator</h2>
                     <p>WAVE (Web Accessibility Evaluation Tool) offers strong visual feedback, highlighting errors
                         directly on the page with icons for easy identification, great for beginners</p>
                 </div>
-                <div class="half-note">
+                <div class="half-note" tabindex="0">
                     <h2>Using aXe Validator</h2>
                     <p>aXe (by Deque) integrates deeply into developer tools, offering technical details, WCAG links,
                         and severity levels (critical, serious, etc.)</p>
                 </div>
-                <div class="half-note">
+                <div class="half-note" tabindex="0">
                     <h2>Using W3 Code Validators</h2>
                     <p>W3 Validators provide means to analyse your HTML or CSS code files to make sure that there are no errors in your code</p>
                 </div>
@@ -124,15 +124,15 @@
         <section>
             <h1>Manual Testing Methods</h1>
             <div class="sticky-wrapper">
-                <div class="half-note">
+                <div class="half-note" tabindex="0">
                     <h2>Color Contrast Validation</h2>
                     <p>Validate the color contrast rations of your elements using tools like the WebAIM website. Try to make it with the minimum or enhanced ratio based on the level of accessibility in your website</p>
                 </div>
-                <div class="half-note">
+                <div class="half-note" tabindex="0">
                     <h2>Screen Readers</h2>
                     <p>Use screen readers like VoiceOver to be able to understand how users with vision impairments would be able to naviagte through your website. Putting yourself in their shoes makes your experience more inclusive</p>
                 </div>
-                <div class="half-note">
+                <div class="half-note" tabindex="0">
                     <h2>Keyboard Naviagtion</h2>
                     <p>Try to naviagte through your website using just your keyboard keys. Are you able to actually naviagate to where you need to go? Do you need improve any focus states of your elements?</p>
                 </div>
