--- a/checkList.html
+++ b/checkList.html
@@ -39,17 +39,23 @@
                 </div>
                 <div class="sticky-note">
                     <h2>Conformance Levels</h2>
-                    <p>There are three Levels of Conformance. <br>Each level builds on the previous level like a pyramid.
-                        <br>So, in order to meet Level AA, you must meet all of Level A, <br>and in order to meet Level AAA, you
-                        must meet all of Level AA.</p>
+                    <p>There are three Levels of Conformance. <br>Each level builds on the previous level like a
+                        pyramid.
+                        <br>So, in order to meet Level AA, you must meet all of Level A, <br>and in order to meet Level
+                        AAA, you
+                        must meet all of Level AA.
+                    </p>
                 </div>
             </div>
         </section>
         <div class="container">
-            <div class="nav-tabs">
-                <button class="nav-tab active" data-tab="food">Color</button>
-                <button class="nav-tab" data-tab="places">Text and Links</button>
-                <button class="nav-tab" data-tab="me">Readibility</button>
+            <div class="nav-tabs" role="navigation" aria-label="Page filter navigation">
+                <button class="nav-tab active" data-tab="food" role="tab" aria-selected="true"
+                    aria-controls="food-content">Color</button>
+                <button class="nav-tab" data-tab="places" role="tab" aria-selected="false"
+                    aria-controls="places-content">Text and Links</button>
+                <button class="nav-tab" data-tab="me" role="tab" aria-selected="false"
+                    aria-controls="me-content">Readibility</button>
             </div>
 
             <div class="content">
